Archive2/0a/a75b4244c2be3f/output
main.cpp:6:9: error: 'g' declared as a member pointer to void
void X::*g();
        ^
1 error generated.
